# SPAR-Framework

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mica.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ADMISSIBILITY.md  ARCHITECTURE.md  CLI.md  EXTRACTION_MAP.md  LEDA_INJECTION_CONTRACT.md  MICA_LEDA_SPAR_WORKFLOW.md  PHYSICS_PROOF_CASE.md  SCIENTIFIC_MODEL_ADAPTER.md  SECURITY_MODEL.md  USE_CASES.md  WHAT_IS_SPAR.md
memory/: spar-framework-mica-runtime.v0.2.2.md  spar-framework-playbook.v1.0.0.md  spar-framework.mica.v1.0.0.json
src/spar_domain_physics/: __init__.py  architecture_gaps.py  context_signals.py  ground_truth.py  ground_truth_table.py  layer_a.py  layer_a_beta_checks.py  layer_a_runtime_checks.py  layer_b.py  layer_b_admissibility.py  layer_b_report_checks.py  layer_c.py  layer_c_advanced.py  layer_c_foundation_helpers.py  layer_c_foundations.py  matcher.py  registry_seed.py  runtime.py  slop_rules.py
src/spar_framework/: __init__.py  cli.py  context.py  engine.py  interfaces.py  mica.py  registry.py  result_types.py  runtime_context.py  schema_loader.py  scoring.py  workflow.py
src/spar_framework/schemas/: context.schema.json  result.schema.json  subject.physics.schema.json
tests/: test_registry.py
