[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spar-framework"
version = "0.1.3"
description = "Standalone deterministic admissibility-review framework"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Flamehaven-Sovereign"
license-files = ["LICENSE"]
authors = [
    {name = "Flamehaven"},
]
keywords = ["verification", "governance", "admissibility", "review", "physics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/flamehaven01/SPAR-Framework#readme"
Repository = "https://github.com/flamehaven01/SPAR-Framework"
Issues = "https://github.com/flamehaven01/SPAR-Framework/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.2.0",
]

[project.scripts]
spar = "spar_framework.cli:main"
spar-context-review = "spar_framework.cli:legacy_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spar_framework = ["schemas/*.json"]
